backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiketin-v2-be
  labels:
    app: tiketin-v2-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiketin-v2-be
  template:
    metadata:
      labels:
        app: tiketin-v2-be
    spec:
      containers:
        - name: tiketin-v2-be
          image: dta32/tiketin-v2-be:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
