backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiketin-v2-be-service
spec:
  selector:
    app: tiketin-v2-be
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
